<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="18dp"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="18dp"
    tools:context="bijay.com.campusplacement.SigninActivity"
    android:id="@+id/signin_layout"
    >

    <TextView
        android:id="@+id/signed_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Signed Mail"
        android:layout_marginBottom="30dp"
        android:textSize="25sp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="#80000000"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sign_Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:gravity="center"
            android:hint="@string/aot_email"
            android:textColor="#E91E63"
            android:textColorHint="#E91E63"
            android:textSize="30sp" />


        <Button
            android:id="@+id/signin_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#D50000"
            android:text="@string/Sign_in_Button_text"
            android:textColor="#000000" />

        <Button
            android:id="@+id/signout_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="#D50000"
            android:text="@string/Sign_out_Button_text"
            android:textColor="#000000" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>
